=head1 NAME

Changes - List of significant changes to Devel::NYTProf

(As of $Date$ $Revision$)

=cut

=head2 Changes in Devel::NYTProf 4.06 (svn XXX) XXX

  Improved handling of Class::MOP/Moose generated methods.
  Improved handling of embedded filenames, e.g., "(eval N)[$path]"
  Added "If Statement and Subroutine Timings Don't Match" and
    "If Headline Subroutine Timings Don't Match the Called Subs"
    sections to the DATA COLLECTION AND INTERPRETATION docs.
  Added note to the docs re profiling applications that use Coro.
  Clarified usecputime=1 docs.
  Updated tests for new functionality in Sub::Name 0.06.

=head2 Changes in Devel::NYTProf 4.05 (svn 1359) 15th Sept 2010

  Fixed tests to work with a new optimization in perl 5.13.4.
  Fixed handling of negative values for subroutine line ranges
    (that may be added to %DB::sub by buggy software). 
  Fixed handling of negative times from unstable clocks
    that caused spikes in statement times.
  Fixed risk of bad line numbers hanging report generation.

=head2 Changes in Devel::NYTProf 4.04 (svn 1332) 9th July 2010

  Profile now reports presence of the slow regex match vars ($& $' $`).
  The (cumulative inclusive) recursion time measured for subs that are involved
    in recursion is now reported as 'recursion: ... sum of overlapping time'.
  Trace log messages are now flushed immediately.
  Reduced risk of crashes in embedded applications that don't handle PL_endav
    carefully, like current versions of mod_perl.

=head2 Changes in Devel::NYTProf 4.03 (svn 1316) 19th June 2010

  Fixed another nytprofhtml performance problem for profiles with
    many files/evals. Much faster merging of evals now.

  For subs that recurse, show max depth and time in subroutine table.

=head2 Changes in Devel::NYTProf 4.02 (svn 1309) 17th June 2010

  Fixed nytprofhtml performance problem for profiles with
    many files/evals.

  Added progress reporting to nytprofhtml.
